--- a/_includes/revelations-body.html
+++ b/_includes/revelations-body.html
@@ -625,7 +625,7 @@
 
             // 네비게이션 초기화
             if (typeof Navigation !== 'undefined') {
-                Navigation.load('revelations', 1);
+                Navigation.load('revelations-info', 1);
             }
 
             if (typeof VersionChecker !== 'undefined') {
