--- a/_includes/revelation-setting-body.html
+++ b/_includes/revelation-setting-body.html
@@ -169,4 +169,11 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/html-to-image@1.11.11/dist/html-to-image.min.js"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-modified-store.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-storage-utils.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-global-presets.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-dropdown.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-character-ui.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-capture.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-share-backup.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/revelation-setting/revelation-setting.js?v={{ site.time | date: '%s' }}"></script>
