--- a/_includes/tactic-body.html
+++ b/_includes/tactic-body.html
@@ -1268,6 +1268,8 @@
             // Update viewport meta tag
             const meta = document.querySelector('meta[name="viewport"]');
             if (meta) {
+                meta.setAttribute(
+                    'content',
                     'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover'
                 );
             }
