revelaition setting table

--- a/_includes/revelation-setting-body.html
+++ b/_includes/revelation-setting-body.html
@@ -147,6 +147,7 @@
             </div>
 
             <div id="rsStatsSummary" class="rs-stats-summary" hidden></div>
+            <div id="rsTierSummaryCard" class="rs-tier-summary-card" hidden></div>
 
             <div id="rsCharacterPanel" class="rs-character-panel" hidden>
                 <div class="rs-character-panel-head">
@@ -176,4 +177,6 @@
 <script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-character-ui.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-capture.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-share-backup.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-tier-estimator.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/apps/revelation-setting/js/revelation-setting-minimum-stats-highlight.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/revelation-setting/revelation-setting.js?v={{ site.time | date: '%s' }}"></script>
