--- a/_includes/material-calc-body.html
+++ b/_includes/material-calc-body.html
@@ -42,7 +42,7 @@
 </script>
 
 <link rel="stylesheet" href="/apps/material-calc/material-planner.css">
-<script src="/apps/material-calc/material-planner.js"></script>
+<script src="/apps/material-calc/material-planner.js?v={{ site.time | date: '%s' }}"></script>
 <script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 
 {% if page.alternate_urls %}
