--- a/_includes/about-body.html
+++ b/_includes/about-body.html
@@ -198,12 +198,15 @@
                             <li>ue</li> <!--15$ 25/09/09-->
                             <li>rudytudysubs</li><!--15$ 26/01/18-->
                             <li>ZexVolts</li><!--15$ 26/02/01-->
+                            <li>Mistiry Shak</li><!--15$ 26/02/20-->
                             <li>Trishelle</li> <!--12$ 26/01/20-->
                             <li>skippy</li> <!--12$ 26/01/21-->
                             <li>Chron</li> <!--12$ 26/02/01-->
                             <li>Xylex(SEA)</li> <!--6$ 25/11--> <!--6$ 26/01/29-->
+                            <li>fan</li> <!--10$ 26/02/20-->
                             <li>kai</li> <!--9$ 25/08/22-->
                             <li>김*환</li> <!--9$ 25/07/18-->
+                            <li>Pips</li> <!--9$ 26/02/10-->
                             <li>임*훈</li><!--10000 25/07/06-->
                             <li>김*현</li> <!--10000 25/05/18-->
                             <li>카미유</li> <!--10000 25/07/18-->
@@ -218,6 +221,7 @@
                             <li>lpmafiota</li> <!--6$ 26/01/31-->
                             <li>Ieat coffe</li> <!--6$ 26/01/31-->
                             <li>Dinjoralo</li> <!--5$ 26/01/31-->
+                            <li>Katsuna</li> <!--5$ 26/02/20-->
                             <li>Nova</li> <!--3$ 26/01/07-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
@@ -228,6 +232,9 @@
                             <li>Dddock</li><!--3$ 26/02/03-->
                             <li>Ravengod</li><!--3$ 26/02/03-->
                             <li>Night Phoenix</li><!--3$ 26/02/01-->
+                            <li>Oil Sykes</li><!--3$ 26/02/20-->
+                            <li>Anon</li><!--3$ 26/02/20-->
+                            <li>Grijas</li><!--3$ 26/02/20-->
                             <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
